src/components/Section/Section.module.scss
@import '/src/styles/index';

$image-width: pxToRem(340);
$image-section-height: pxToRem(250);

$lg-image-width: $image-width * 1.4;
$lg-image-height: $image-section-height * 1.4;

.section {
    position: relative;
    display: flex;
    justify-content:  center;
    align-items: center;
    gap: $primary-horizontal-space;
    width: 100vw;
    min-height: $image-section-height;
    scroll-margin: pxToRem(32);

    @include lg {
        min-height: $lg-image-height;
    }

    &_fitWrapper {
        display: flex;
        flex-direction: column;
        justify-content:  center;
        align-items: center;
        gap: $primary-horizontal-space;
        width: 100vw;
        padding: 0 $primary-horizontal-space;
        background-color: transparent;

        @include md {
            flex-direction: row;
            justify-content: space-between;
        }

        @include lg {
            width: $dc-content-width;
        }

        @include rwd(1180px) {
           padding-left: 0;
           padding-right: 0;
        }
        
    }

    &_contentWrapper {
        display: flex;
        flex-direction: column;
        gap: pxToRem(15);
        width: 100%;
        max-width: pxToRem(450);
        text-align: center;

        @include md {
            text-align: start;
        }
        
        @include lg {
            width: $dc-content-width;
            padding: 0  $primary-horizontal-space;
        }

        @include rwd(1180px) {
           padding-left: 0;
           padding-right: 0;
        }

        &__onlyText {
            align-items: center;
            justify-content: center;
            max-width: pxToRem(480);
            text-align: center;

            @include md {
                text-align: center;
            }
        }
    }

    &_heading {
        color: $primary-text;
        font-size: pxToRem(25);
        font-weight: 700;
        text-transform: capitalize;
        letter-spacing: pxToRem(2); 

        &__hero {
            font-size: pxToRem(27);
        }
    }

    &_text {
        color: $secondary-text;
        font-size: pxToRem(16);
        font-weight: 400;
    }

    &_placeHolder {
        display: block;
        min-width: $image-width * 1.1;
        height: $image-section-height;
        background-color: transparent;
        order: -1;

        @include md {
            order: 1;
        }

        &__leftSide {
            @include md {
                order: -1;
            }
        }

        @include lg {
            width: $lg-image-width * 1.15;
            height: $lg-image-height;
        }
    }

    &_imageWrapper {
        position: absolute;
        top: 0;
        left: 50%;
        display: flex;
        width: 100%;
        height: 0;
        transform: translateX(-50%);

        &::after {
            content: '';
            position: absolute;
            top: 0;
            left: auto;
            right: auto;
            display: block;
            width: calc(50% + $image-width / 4);            
            height: $image-section-height * 2 / 3;
            background: $secondary-background;
            transform: translate(0, $image-section-height * 1 / 3);
            z-index: 10;

            @include lg {
                width: calc(50% + $lg-image-width / 4);
                height: $lg-image-height * 2 / 3;
                transform: translate(0, $lg-image-height * 1 / 3);
            }
        }

        &__left {
            &::after {
                left: 0;
                border-radius: 0 0 pxToRem(100) 0;

                @include md {
                    left: pxToRem(100);
                    width: 100vw;
                    transform: translate(calc(-100% + $image-width * 2 / 3), $image-section-height * 1 / 3);
                }

                @include lg {
                    transform: translate(calc(-100% + $lg-image-width * 2 / 3), $lg-image-height * 1 / 3);
                }

                @include rwd(1800px) {
                    left: 15vw;
                }
            }

            .section_image {
                @include md {
                    right: auto;
                    left: pxToRem(70);
                    transform: none;
                }

                @include rwd(1800px) {
                    left: 15vw;
                }
            }

            @include md {
                min-width: $image-width;
            }

            @include lg {
                min-width: $lg-image-width;
            }
        }

        &__right {
            &::after {
                right: 0;
                border-radius: 0 0 0 pxToRem(100);

                @include md {
                    right: pxToRem(70);
                    width: 100vw;
                    transform: translate(calc(100% - $image-width * 2 / 3), $image-section-height * 1 / 3);
                }

                @include lg {
                    transform: translate(calc(100% - $lg-image-width * 2 / 3), $lg-image-height * 1 / 3);
                }

                @include rwd(1800px) {
                    right: 15vw;
                }
            }

            .section_image {
                @include md {
                    left: auto;
                    right: pxToRem(70);
                    transform: none;
                }

                @include rwd(1800px) {
                    right: 15vw;
                }
            }

            @include md {
                order: 1;
                min-width: $image-width;
            }

            @include lg {
                min-width: $lg-image-width;
            }
        }
    }

    &_image {
        position: absolute;
        top: 0;
        left: 50%;
        width: $image-width;
        height: $image-section-height;
        background-color: transparent;
        object-fit: contain;
        object-position: top;
        transform: translate(-50%, 0);
        z-index: 11;
        
        @include lg {
            width: $lg-image-width; 
            height: $lg-image-height;
        }
    }

    &_content {
        display: flex;
        justify-content: center;
        align-items: center;
        align-self: center;
        width: 100%;
    }

    &__onlyText {
        & > .section_fitWrapper {
            flex-direction: column;
        }

        & > .section_content {
            display: flex;
            justify-content: center;
            align-items: center;
            align-self: center;
            width: 100%;
        }
    }
}

